# rubin_hackathon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_scc.md  SCC_QUICKSTART.md  pyproject.toml  troubleshooting.md
benchmarks/: data_engineering.toml  preml_data_engineering.toml
dashboard/: app.py  requirements.txt
docs/: debass_teammate_walkthrough.tex  execplan_lsst_truth_gap.md  execplan_rubin_alignment.md  execplan_v6e2_trust_retrain.md  execplan_v6e_more_dp1_experts.md  ml_data_infrastructure_analysis.md  plan_lightup_campaign.md  runbook_lightup.md  scc_deployment_verification.md  science_contract.md
env/: requirements-gpu.txt  requirements-local-classifiers.txt  requirements.txt
inventory/: brokers.yaml  classifiers.yaml
jobs/: analyze_results.sh  backfill.sh  backfill_array.sh  build_epochs.sh  download_training.sh  local_infer.sh  local_infer_alerce_lc.sh  local_infer_array.sh  local_infer_cpu.sh  local_infer_gpu.sh  local_infer_snn.sh  normalize.sh  probe.sh  report.sh  run_alerce_lc_array.sh  run_alerce_lc_honest.sh  run_alerce_lc_train.sh  run_f3_pipeline.sh  run_f3_safe_pipeline.sh  run_f3_safe_v2_pipeline.sh  run_f3_safe_v3_pipeline.sh  run_f3_safe_v4_pipeline.sh  run_f3_safe_v5b_truth_fill.sh  run_f3_safe_v5c.sh  run_f6_figures.sh  run_f6_safe_figures.sh  run_f6_safe_v2_figures.sh  run_f6_safe_v3_figures.sh  run_f6_safe_v4_figures.sh  run_gpu_resume.sh  run_phase1_fink_lsst.sh  run_phase1_lasair_lsst.sh  run_phase1_pittgoogle.sh  run_phase2_normalize_fink_pitt.sh  run_phase2_normalize_lasair.sh  run_phase3_normalize_and_v5.sh  run_salt3_array.sh  run_v6e2_gold_array.sh  run_v6e2_local_infer_lsst_array.sh  run_v6e2_local_infer_seq.sh  (+17 more)
published_results/: expert_coverage.json  expert_trust_metrics.json  followup_metrics.json  phase1_metrics.json  results_summary.json  results_summary.txt  sample_scores_ndet10.jsonl  split_summary.json  (+2 more)
(+306 files in other folders)
